Added 3rd party API call to service, also updated description in swagger .yaml file (#26)
* Added 3rd party API call to service, also updated description in swagger .yaml file

* Fixed notes from PR

* Fixed naming for new parameters in handlers

* Fixed last notes from PR

* Separated users handlers from rates handlers

* Moved 2 handlers packages to one folder

* Fixed the error with several packages in 1 folder

* Fixed the names of files in  handlers folder

* Moved WCI logic from handlers package to WCI package

* Renamed structs in models package
